# nekoton

./: .gitignore  Cargo.toml  README.md  crates.js  help.html  index.html  rust-toolchain  rust-toolchain.toml  search-index.js  settings.html  source-files.js  src-files.js
benches/: words.rs
gen-protoc/: Cargo.toml
gen-protos/: Cargo.toml
gen_protos/: all.html  fn.main.html  index.html
nekoton/: all.html  index.html  sidebar-items.js
nekoton-abi/: Cargo.toml
nekoton-abi/src/: abi_helpers.rs  code_salt.rs  event_builder.rs  function_builder.rs  known_param_type.rs  lib.rs  message_builder.rs  models.rs  salt.rs  token_packer.rs  token_unpacker.rs  tokens_json.rs  transaction_parser.rs  tvm.rs
nekoton-abi/test/: dex_abi.json  msig_abi.json
nekoton-contracts/: Cargo.toml
nekoton-contracts/src/: lib.rs  tip3.rs  tip4.rs
nekoton-contracts/src/abi/: DePoolV3Participant.abi.json  TONTokenWalletV4.abi.json  WalletNotifications.abi.json  mod.rs
nekoton-contracts/src/access/: mod.rs  ownable_internal_contract.rs
nekoton-contracts/src/code/: highload_wallet_v2_code.boc  mod.rs
nekoton-contracts/src/dens/: domain_contract.rs  mod.rs  root_contract.rs
nekoton-contracts/src/jetton/: mod.rs  root_token_contract.rs  token_wallet_contract.rs
nekoton-contracts/src/nft_index/: mod.rs
nekoton-contracts/src/old_tip3/: mod.rs  root_token_contract.rs  token_wallet_contract.rs
nekoton-contracts/src/tip1155/: mod.rs
nekoton-contracts/src/tip3/: mod.rs  root_token_contract.rs  token_wallet_contract.rs
nekoton-contracts/src/tip3_1/: mod.rs  root_token_contract.rs  token_wallet_contract.rs
nekoton-contracts/src/tip3_any/: mod.rs  root_token_contract.rs  token_wallet_contract.rs
nekoton-contracts/src/tip4_1/: collection_contract.rs  mod.rs  nft_contract.rs
nekoton-contracts/src/tip4_2/: metadata_contract.rs  mod.rs
nekoton-contracts/src/tip4_2_2/: collection_contract.rs  metadata_contract.rs  mod.rs
nekoton-contracts/src/tip4_3/: collection_contract.rs  index_contract.rs  mod.rs  nft_contract.rs
nekoton-contracts/src/tip6/: mod.rs  sid.rs
nekoton-contracts/src/wallets/: ever_wallet.rs  mod.rs  multisig.rs  multisig2.rs  notifications.rs  safe_multisig.rs
nekoton-contracts/src/wallets/code/: Multisig2.tvc  SetcodeMultisigWallet24h.tvc  jetton_wallet.boc  jetton_wallet_governed.boc  jetton_wallet_hamster_combat.boc  jetton_wallet_v2.boc  mod.rs  wallet_v3r1_code.boc  wallet_v4r1_code.boc
nekoton-core/: Cargo.toml
nekoton-core/src/: lib.rs  models.rs  parsing.rs  utils.rs
nekoton-core/src/contract_subscription/: mod.rs
nekoton-core/src/generic_contract/: mod.rs
nekoton-core/src/native_wallet/: highload_wallet_v2.rs  mod.rs  multisig.rs  wallet_v3.rs
nekoton-core/src/nft_wallet/: mod.rs
nekoton-core/src/token_wallet/: mod.rs
nekoton-core/src/transport/: mod.rs
nekoton-core/src/transport/gql/: mod.rs  query_accounts_by_code_hash.graphql  schema.graphql
nekoton-core/src/transport/jrpc/: mod.rs
nekoton-derive/: Cargo.toml
nekoton-derive/src/: ast.rs  attr.rs  known_param_type.rs  lib.rs  pack_abi.rs  symbol.rs  unpack_abi.rs  utils.rs
nekoton-derive/tests/: enum.rs  known_param_type.rs  map.rs  names.rs  pack_with.rs  plain_struct.rs  progress.rs  struct.rs  types.rs  unpack_with.rs  vec.rs
nekoton-derive/token-abi/token-abi/: Cargo.toml
nekoton-derive/token-abi/token-abi/src/: attr.rs  pack_abi.rs  symbol.rs  unpack_abi.rs  utils.rs
nekoton-derive/token-abi/token-abi/tests/: enum.rs  names.rs  pack_with.rs  plain_struct.rs  struct.rs  types.rs  unpack_with.rs  vec.rs
nekoton-derive/token-abi/token-packer/: Cargo.toml
nekoton-derive/token-abi/token-packer/src/: lib.rs
nekoton-derive/token-abi/token-unpacker/: Cargo.toml
nekoton-derive/token-abi/token-unpacker/src/: lib.rs
nekoton-indexer-utils/: Cargo.toml
nekoton-indexer-utils/src/: existing_contract.rs  lib.rs  shard_utils.rs  tx_context.rs
nekoton-jetton/: Cargo.toml
nekoton-jetton/src/: dict.rs  lib.rs  meta.rs
nekoton-models/: Cargo.toml
nekoton-parser/: Cargo.toml
nekoton-parser/src/: address.rs  lib.rs  models.rs
nekoton-parser/src/abi/: function_builder.rs  message_builder.rs  mod.rs  token_ext.rs  token_packer.rs  token_parser.rs  token_unpacker.rs  uint128_bytes.rs  uint128_number.rs  uint160_bytes.rs  uint256_bytes.rs
nekoton-proto/: Cargo.toml  build.rs
nekoton-proto/src/: lib.rs  models.rs  rpc.proto  utils.rs
nekoton-proto/src/protos/: mod.rs  rpc.proto  rpc.rs
nekoton-tests/: Cargo.toml
nekoton-tests/src/: lib.rs
nekoton-transport/: Cargo.toml
nekoton-transport/src/: gql.rs  gql_ext.rs  jrpc.rs  lib.rs  proto.rs  ton.rs
nekoton-utils/: Cargo.toml
nekoton-utils/src/: address.rs  cell.rs  clock.rs  encryption.rs  lib.rs  serde_helpers.rs  signature_domain.rs  traits.rs  transaction.rs  uint128.rs
nekoton_abi/: all.html  constant.GEN_TIMINGS_ALLOWABLE_INTERVAL.html  derive.KnownParamType.html  derive.KnownParamTypePlain.html  derive.PackAbi.html  derive.PackAbiPlain.html  derive.UnpackAbi.html  derive.UnpackAbiPlain.html  enum.ExtractionError.html  enum.GenTimings.html  enum.LastTransactionId.html  enum.MethodName.html  enum.TokensJsonError.html  enum.UnpackerError.html  fn.answer_id.html  fn.code_to_tvc.html  fn.create_boc_or_comment_payload.html  fn.create_boc_payload.html  fn.create_comment_payload.html  fn.decode_event.html  fn.decode_input.html  fn.decode_output.html  fn.default_blockchain_config.html  fn.extract_public_key.html  fn.get_code_salt.html  fn.get_state_init_hash.html  fn.guess_method_by_input.html  fn.insert_state_init_data.html  fn.make_abi_token_value.html  fn.make_abi_tokens.html  fn.pack_into_cell.html  fn.parse_abi_token.html  fn.parse_abi_token_value.html  fn.parse_abi_tokens.html  fn.parse_comment_payload.html  fn.parse_transaction_messages.html  fn.process_out_messages.html  fn.process_raw_outputs.html  fn.read_function_id.html  fn.read_input_function_id.html  (+40 more)
nekoton_contracts/: all.html  index.html  (+2 more)
transport/: Cargo.toml
transport/src/: lib.rs  models.rs
transport/src/endpoint/: jrpc.rs  mod.rs
(+3788 files in other folders)
