[package]
name = "nekoton"
version = "0.11.0"
authors = [
    "Alexey Pashinov <pashinov93@gmail.com>",
    "Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>",
    "Ivan Kalinin <i.kalinin@dexpa.io>"
]
edition = "2021"

[workspace]
members = [
    "nekoton-abi",
    "nekoton-contracts",
    "nekoton-derive",
    "nekoton-indexer-utils",
    "nekoton-transport",
    "nekoton-utils",
    "nekoton-tests"
]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.13"
chacha20poly1305 = "0.10.0-pre.1"
curve25519-dalek-ng = "4.1.1"
downcast-rs = "1.2"
dyn-clone = "1.0"
futures-util = "0.3"
getrandom = "0.2.4"
graphql_client = { version = "0.10", optional = true }
hex = "0.4"
hmac = "0.11.0"
log = "0.4"
num-bigint = { version = "0.3", features = ["serde"] }
once_cell = "1.10.0"
parking_lot = "0.12.0"
pbkdf2 = "0.9.0"
rand = { version = "0.8", features = ["getrandom"] }
secstr = { version = "0.4.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9.9"
thiserror = "1.0"
tiny-jsonrpc = { version = "0.6.0", default-features = false, optional = true }
tokio = { version = "1", default-features = false, features = ["sync"] }
zeroize = "1"

ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }
tiny-bip39 = { git = "https://github.com/broxus/tiny-bip39.git", default-features = false }
tiny-hderive = { git = "https://github.com/broxus/tiny-hderive.git" }

ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_executor = { git = "https://github.com/broxus/ton-labs-executor.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }

nekoton-contracts = { path = "nekoton-contracts" }
nekoton-abi = { path = "nekoton-abi", features = ["derive"] }
nekoton-utils = { path = "nekoton-utils", features = ["encryption"] }

[dev-dependencies]
reqwest = { version = "0.11.8", features = ["gzip"] }
cargo-husky = { version = "1", features = ["default", "run-cargo-fmt", "run-cargo-check"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = ["gql_transport"]
integration_test = []
web = ["nekoton-contracts/web", "nekoton-abi/web", "nekoton-utils/web", "getrandom/wasm-bindgen", "ton_abi/web"]
gql_transport = ["graphql_client"]
jrpc_transport = ["tiny-jsonrpc"]
