[package]
name = "nekoton-abi"
version = "0.13.0"
authors = [
    "Alexey Pashinov <pashinov93@gmail.com>",
    "Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>",
    "Ivan Kalinin <i.kalinin@dexpa.io>",
]
rust-version = "1.62.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
hex = "0.4"
log = "0.4"
num-bigint = "0.4"
rustc-hash = "1.1.0"
num-traits = "0.2"
once_cell = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = { version = "1.9", features = ["const_generics", "union", "write"] }
thiserror = "1.0"

ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }

ton_abi = { git = "https://github.com/broxus/ton-labs-abi"}
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_executor = { git = "https://github.com/broxus/ton-labs-executor.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
ton_vm = { git = "https://github.com/broxus/ton-labs-vm.git" }

nekoton-derive = { path = "../nekoton-derive", optional = true }
nekoton-utils = { path = "../nekoton-utils" }

[dev-dependencies]
nekoton-contracts = { path = "../nekoton-contracts" }

[features]
default = []
derive = ["nekoton-derive"]
web = ["ton_abi/web", "nekoton-derive/web", "nekoton-utils/web"]
