[package]
name = "nekoton-contracts"
version = "0.10.0"
authors = [
    "Alexey Pashinov <pashinov93@gmail.com>",
    "Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>",
    "Ivan Kalinin <i.kalinin@dexpa.io>"
]
edition = "2018"

[dependencies]
anyhow = "1.0"
once_cell = "1.9.0"
thiserror = "1.0"

ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }

nekoton-abi = { path = "../nekoton-abi", features = ["derive"] }
nekoton-utils = { path = "../nekoton-utils" }
