[package]
name = "nekoton-core"
version = "0.11.0"
authors = [
    "Alexey Pashinov <pashinov93@gmail.com>",
    "Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>",
    "Ivan Kalinin <i.kalinin@dexpa.io>"
]
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.13"
downcast-rs = "1.2"
futures-util = "0.3"
getrandom = "0.2.4"
graphql_client = { version = "0.11", optional = true }
hex = "0.4"
log = "0.4"
once_cell = "1.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tiny-jsonrpc = { version = "0.6.0", default-features = false, optional = true }
tokio = { version = "1", default-features = false, features = ["sync"] }
zeroize = "1"

ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }
tiny-bip39 = { git = "https://github.com/broxus/tiny-bip39.git", default-features = false }
tiny-hderive = { git = "https://github.com/broxus/tiny-hderive.git" }

ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_executor = { git = "https://github.com/broxus/ton-labs-executor.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }

nekoton-abi = { path = "../nekoton-abi", features = ["derive"] }
nekoton-contracts = { path = "../nekoton-contracts" }
nekoton-utils = { path = "../nekoton-utils" }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "gzip"] }
tokio = { version = "1", default-features = false, features = ["sync", "rt", "macros"] }

[features]
default = ["gql_transport"]
web = ["nekoton-contracts/web", "nekoton-abi/web", "nekoton-utils/web", "getrandom/wasm-bindgen", "ton_abi/web"]
gql_transport = ["graphql_client"]
jrpc_transport = ["tiny-jsonrpc"]

