[package]
name = "nekoton-derive"
version = "0.10.0"
authors = [
    "Alexey Pashinov <pashinov93@gmail.com>",
    "Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>",
    "Ivan Kalinin <i.kalinin@dexpa.io>"
]
edition = "2018"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
hex = "0.4"
num-bigint = { version = "0.3", features = ["serde"] }
num-traits = "0.2.14"
trybuild = "1.0.42"

ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }

nekoton-abi = { path = "../nekoton-abi", features = ["derive"] }

[dependencies]
proc-macro2 = "1.0.27"
quote = "1.0.9"
syn = { version = "1.0" }
either = "1.5"

[features]
web = ["nekoton-abi/web", "ton_abi/web"]
