[package]
name = "nekoton-derive"
version = "0.13.0"
authors = [
    "Alexey Pashinov <pashinov93@gmail.com>",
    "Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>",
    "Ivan Kalinin <i.kalinin@dexpa.io>",
]
rust-version = "1.62.0"
edition = "2021"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
trybuild = "1.0"

ton_abi = { git = "https://github.com/broxus/ton-labs-abi", branch = "feature/new-abi" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }

nekoton-abi = { path = "../nekoton-abi", features = ["derive"] }

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0" }
either = "1.7"

[features]
web = ["nekoton-abi/web", "ton_abi/web"]
