[package]
name = "nekoton-indexer-utils"
version = "0.10.0"
authors = ["Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>"]
edition = "2018"

[dependencies]
anyhow = "1"
thiserror = "1.0"

nekoton = { path = "..", default-features = false }
nekoton-abi = { path = "../nekoton-abi", default-features = false }
nekoton-utils = { path = "../nekoton-utils", default-features = false }

ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }

[dev-dependencies]
hex = "0.4.3"
