[package]
name = "nekoton-jetton"
version = "0.13.0"
authors = [
    "Alexey Pashinov <pashinov93@gmail.com>",
    "Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>",
    "Ivan Kalinin <i.kalinin@dexpa.io>"
]
rust-version = "1.62.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
lazy_static = "1.5.0"
serde = { version = "1.0.183", features = ["derive"] }
sha2 = "0.10.8"

ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }

nekoton-utils = { path = "../nekoton-utils" }
num-bigint = "0.4.6"
num-traits = "0.2.19"

[features]
web = ["ton_abi/web"]
