[package]
name = "nekoton-proto"
version = "0.13.0"
authors = [
    "Alexey Pashinov <pashinov93@gmail.com>",
    "Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>",
    "Ivan Kalinin <i.kalinin@dexpa.io>"
]
rust-version = "1.62.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum-core = "0.3"
http = "0.2"
http-body = "0.4"
prost = "0.11"
reqwest = "0.11"
tracing = "0.1.37"

ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types" }

nekoton-abi = { path = "../nekoton-abi", default-features = false }

[build-dependencies]
prost-build = "0.11"
