[package]
name = "nekoton-tests"
version = "0.11.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures-util = "0.3"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
base64 = "0.13"
tokio = { version = "1", features = ["sync", "time"] }

nekoton-utils = { path = "../nekoton-utils" }
nekoton = { path = ".." }
nekoton-transport = {path = "../nekoton-transport", features = ["default"]}
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }

ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }



[dev-dependencies]
tokio = { version = "1", features = ["sync", "time", "macros"] }
