[package]
name = "nekoton-transport"
version = "0.10.0"
authors = [
    "Alexey Pashinov <pashinov93@gmail.com>",
    "Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>",
    "Ivan Kalinin <i.kalinin@dexpa.io>"
]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["sync", "time"] }

nekoton-utils = { path = "../nekoton-utils" }
nekoton = { path = ".." }

[dev-dependencies]
tokio = { version = "1", features = ["sync", "time", "macros"] }

[features]
default = ["gql_transport"]
gql_transport = ["nekoton/graphql_client"]
jrpc_transport = ["nekoton/jrpc_transport"]
