[package]
name = "nekoton-transport"
version = "0.13.0"
authors = [
    "Alexey Pashinov <pashinov93@gmail.com>",
    "Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>",
    "Ivan Kalinin <i.kalinin@dexpa.io>"
]
rust-version = "1.62.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures-util = "0.3"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "gzip", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["sync", "time"] }

nekoton-proto = { path = "../nekoton-proto" }
nekoton-utils = { path = "../nekoton-utils" }
nekoton = { path = ".." }

[dev-dependencies]
tokio = { version = "1", features = ["sync", "time", "macros"] }

[features]
default = ["gql_transport"]
gql_transport = ["nekoton/gql_transport"]
jrpc_transport = ["nekoton/jrpc_transport"]
proto_transport = ["nekoton/proto_transport"]
