[package]
name = "nekoton-utils"
version = "0.5.0"
authors = [
    "Alexey Pashinov <pashinov93@gmail.com>",
    "Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>",
    "Ivan Kalinin <i.kalinin@dexpa.io>"
]
edition = "2018"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
chacha20poly1305 = { version = "0.9", optional = true }
ed25519-dalek = "1.0"
hex = "0.4"
log = "0.4"
num-bigint = { version = "0.3", features = ["serde"] }
num-traits = "0.2"
ring = { version = "0.16", optional = true }
secstr = { version = "0.4.0", features = ["serde"], optional = true }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.9"
thiserror = "1.0"

ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }

[features]
encryption = ["chacha20poly1305", "ring", "secstr"]
