[package]
name = "nekoton-utils"
version = "0.13.0"
authors = [
    "Alexey Pashinov <pashinov93@gmail.com>",
    "Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>",
    "Ivan Kalinin <i.kalinin@dexpa.io>"
]
rust-version = "1.62.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
chacha20poly1305 = { version = "0.10.1", optional = true }
hex = "0.4"
hmac = "0.11.0"
js-sys = { version = "0.3", optional = true }
pbkdf2 = { version = "0.12.2", optional = true }
secstr = { version = "0.5.0", features = ["serde"], optional = true }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "1.0"
zeroize = { version = "1", optional = true }

ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }

ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }

[dev-dependencies]
serde_json = "1.0"
bincode = "1.3.3"

[features]
encryption = ["chacha20poly1305", "pbkdf2", "secstr", "zeroize"]
web = ["js-sys"]
