[package]
name = "nekoton-token-abi"
version = "0.1.0"
authors = ["Alexey Pashinov <pashinov93@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
hex = "0.4"
num-bigint = { version = "0.2", features = ["serde"] }
num-traits = "0.2.14"
trybuild = "1.0.42"

ton_abi = { git = "https://github.com/tonlabs/ton-labs-abi", rev = "a2b2a9dc2e8c30a070e9af79cf0c24a55bdd5a87" }
ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }

nekoton-token-packer = { path = "../token-packer" }
nekoton-token-unpacker = { path = "../token-unpacker" }

[dependencies]
proc-macro2 = "1.0.27"
quote = "1.0.9"
syn = { version = "1.0.72" }
either = "1.5"
